package NPDiskFIT;

message TFakeVDiskState {
    message TLogItem {
        optional uint64 Lsn = 1;
        optional uint32 Signature = 2;
        optional uint32 DataLen = 3;
        optional uint32 Checksum = 4;
        repeated uint32 CommitChunks = 5;
        repeated uint32 DeleteChunks = 6;
    };
    message TChunk {
        message TBlock {
            optional uint32 Index = 1;
            optional uint32 Checksum = 2;
        };
        optional uint32 ChunkIdx = 1;
        repeated TBlock Blocks = 2;
        optional uint32 CommitState = 3;
    };
    message TWriteRecord {
        optional uint32 ChunkIdx = 1;
        optional uint32 OffsetInBlocks = 2;
        optional uint32 SizeInBlocks = 3;
        repeated uint32 Checksums = 4;
    };
    repeated TLogItem LogItems = 1;
    repeated TLogItem InFlightItems = 2;
    optional uint64 FirstLsnToKeep = 3;
    optional uint32 BlocksInChunk = 4;
    repeated TChunk Chunks = 5;
    repeated TWriteRecord WritesInFlight = 6;
};

message TObjectWithStateDict {
    message TItem {
        optional string Key = 1;
        optional bytes Value = 2;
    };
    repeated TItem Items = 1;
};
